# msu2_mini

./: CHANGELOG - dchg.txt  CHANGELOG.md  CHANGELOG.txt  ContinuousCapture.py  MSU2_MINI.json  MSU2_MINI_DemoV1.6_dchg.bat  MSU2_MINI_DemoV1.6_dchg.py  MSU2_MINI_DemoV1.6_dchg_to_exe.bat  MSU2_MINI_DemoV1.6_dchg_to_exe_dir_console.bat  MSU2_MINI_DemoV1.6_dchg_to_exe_gcc.bat  MSU2_MINI_DemoV1.6_dchg_to_exe_gcc_dir.bat  MSU2_MINI_MG_minimark.py  README.md  mori by dh原版.py  note_by_evan.txt  pyproject.toml  python依赖库安装.txt  requirements.txt  指令.txt  接口说明 by Evan.txt
other/: MSU2_MINI_DemoV1.6_Output.py  MSU2_MINI_DemoV1.6_dchg1205.py  MSU2_MINI_MG-20241202.py  MSU2_MINI_MG.py  MSU2_MINI_MG_old.py  testLCDshowIP.py  testLCDshowIP_to_exe_linux.sh  testPCScreen.py  点击MSU2_MINI_start.exe启动程序及部分说明.txt
scripts/: MSU2_MINI_DemoV1.6_dchg.bat  MSU2_MINI_DemoV1.6_dchg_to_exe.bat  MSU2_MINI_DemoV1.6_dchg_to_exe_dir_console.bat  MSU2_MINI_DemoV1.6_dchg_to_exe_gcc.bat  MSU2_MINI_DemoV1.6_dchg_to_exe_gcc_dir.bat  MSU2_MINI_DemoV1.6_dchgw.bat
原版/: MSU2_MINI_MG.bat  MSU2_MINI_MG.py  MSU2_MINI_MG_minimark.py  mori by dh原版.py  烧录工具下载地址.txt
原版/1.2/: MSU2_MINI_Firmware_V1.2.hex  新建文本文档.txt
